--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-PAGINATION HELPER
+<h1>PAGINATION HELPER</h1>
 PaginationHelper  used for implementation of pagination UI components and a set of Unit tests to properly test it.
 
 TECHNOLOGIES
